# wled-orchestrator

./: .gitignore  LICENSE  README.md  daemon.py  discover-test.py  pyproject.toml  run.py  test.py
front-end/: package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.vue  main.js
front-end/src/components/: PatternInterval.vue  Schedule.vue  WLEDGroup.vue  WLEDInstance.vue
front-end/src/plugins/: color-picker.js  vuetify.js
front-end/src/store/: index.js
front-end/src/styles/: main.scss
front-end/src/views/: Home.vue
src/: config.py  connection.py  db.py  discover.py  front_end.py  led_string.py  server.py
tests/: test_wled_orchestrator.py
