[tool.poetry]
name = "wled-orchestrator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
loguru = "^0.5.3"
Flask = "^2.0.2"
eventlet = "0.33.1"
Flask-SocketIO = "4.3.2"
SQLAlchemy = "^1.4.27"
more-itertools = "9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
